Added castle image

--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
 
         <title>
 
-            my title
+            Chambord Castle
 
         </title>
 
+        <link rel="stylesheet" href="./style.css"/>
+
     </head>
+
+    <body>
+
+        <div class="component">
+
+
+        </div>
+
+    </body>
 
 </html>
 
