--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <html>
 
     <head>
@@ -21,26 +23,30 @@
                 <img src="images/card__picture__image.jpg" id="castle"/>
 
             </div>
-            
             <div id="text">
-
                 <h2>
                     Le chateau de Chambord
                 </h2>
 
-                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas varius tortor nibh, sit amet tempor nibh finibus et. Aenean eu enim justo. Vestibulum aliquam hendrerit molestie. Mauris malesuada nisi sit amet augue accumsan tincidunt. Maecenas tincidunt, velit ac porttitor pulvinar, tortor eros facilisis libero, vitae commodo nunc quam et ligula. Ut nec ipsum sapien. 
+                <p>
+                Lorem opsum dolor sit amet, consectetur adipiscing Lorem opsum dolor sit amet, consectetur adipiscing Lorem opsum dolor sit amet, consectetur adipiscing Lorem opsum dolor sit amet, consectetur adipiscingLorem opsum dolor sit amet, consectetur adipiscingLorem opsum dolor sit amet, consectetur adipiscing
                 </p>
+            </div>  
+            
+            <div id="En_Savoir_Plus">
+                <button>
 
-            </div>
+                    <span>
 
+                        En savoir plus
 
+                    </span>
+
+                </button>
+            </div> 
         </div>
 
     </body>
 
 
 </html>
-
-
-
